# fp-dataset-artifacts

./: .gitignore  KEEP-FinalProject-SNLI-Baseline-Analysis.ipynb  KEEP-FinalProject-SNLI-Model-Performance.ipynb  KEEP-FinalProject-SNLI-Prepare-Probability-Distributions.ipynb  KEEP_1-FinalProject-SNLI-Prepare-Probability-Distributions.ipynb  KEEP_2-FinalProject-SNLI-Model-Training-and-Evaluation.ipynb  KEEP_3-FinalProject-SNLI-Baseline-Analysis.ipynb  KEEP_4-FinalProject-SNLI-Model-Performance.ipynb  KEEP_5-FinalProject-SNLI-Ambiguous-Data.ipynb  README.md  custom_electra.py  final-project-notes.md  helpers.py  jupyter.sh  pyproject.toml  requirements.txt  run.py  ubuntu.sh
docs/: openai-api.md  resources.md  scope-of-the-project.md
fp_dataset_artifacts/: utils.py
latex/: FinalProject-final.tex  anthology.bib  custom.bib
notebooks/: hotpot_qa basics.ipynb  hotpot_qa.ipynb  quickstart.ipynb  snli basics.ipynb  snli classification.ipynb  snli fine tune.ipynb  snli_preds.jsonl  squad basics.ipynb  squad.ipynb  squad_v2 with modified prompt.ipynb
