[tool.poetry]
name = "fp-dataset-artifacts"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
numpy = "^1.21.4"
openai = "^0.11.0"

[tool.poetry.dev-dependencies]
black = "^21.11b1"
jupyterlab = "^3.2.4"

[tool.black]
line-length = 79
skip-string-normalization = true
target-version = ['py37']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
